test/files/neg/t10156.check
t10156.scala:4: error: implicit error;
!I a: A
  val z = x _
          ^
1 error
